Bug 300188 - Editing a bookmark changes its order in the tree
Summary: Editing a bookmark changes its order in the tree
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-17 09:58 UTC by Dennis Nienhüser
Modified: 2012-06-10 09:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Nienhüser 2012-05-17 09:58:46 UTC
In master (to be KDE/4.9) when editing a bookmark it is always removed from the tree and re-added. Therefore it appears at the end of a folder even when only changing its name.
In KDE/4.8 this is implemented in a nicer way such that the original bookmark is adjusted.


Reproducible: Always

Steps to Reproduce:
1. Note the order of a bookmark in the tree (folder)
2. Edit the bookmark (change the name)
3. Note the order of the same bookmark (now at the end of the containing folder)



Expected Results:  
Bookmarks should only change their position in the tree when needed (i.e. when the parent container is changed)
Comment 1 Thibaut Gridel 2012-06-10 09:05:35 UTC
Git commit f5029d2d85c7ae146f3d042af2aa05c3c3027dd7 by Thibaut Gridel.
Committed on 09/06/2012 at 18:47.
Pushed by tgridel into branch 'master'.

BookmarkManager: don't remove and add a bookmark that got edited

M  +5    -0    src/lib/BookmarkManager.cpp
M  +2    -0    src/lib/BookmarkManager.h
M  +13   -13   src/lib/BookmarkManagerDialog.cpp

http://commits.kde.org/marble/f5029d2d85c7ae146f3d042af2aa05c3c3027dd7