BookmarkManager: don't remove and add a bookmark that got edited

BUG: 300188